# yt-downer

./: README.md  package-lock.json  package.json  tsconfig.json
src/: App.tsx  app.module.css  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/form/: index.tsx  styles.module.css
src/svgs/: download.tsx  save.tsx
